--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Zuhause
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>KK @ GitHub</title>
   </head>
   <body>
     <h1>{{ "Hallo Welt!" | downcase }}</h1>
