--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ title: Zuhause
     <title>KK @ GitHub</title>
   </head>
   <body>
-    <h1>{{ "Hallo Welt!" | downcase }}</h1>
+    <h1>{{ "Moinsen!" | downcase }}</h1>
   </body>
 </html>
