--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ title: Zuhause
   </head>
   <body>
     <h1>{{ "Moinsen!" | downcase }}</h1>
-    <a href="url">https://github.com/karstenkelm?tab=repositories/</a>
+    <a href="url">https://github.com/karstenkelm?tab=repositories/ target="_blank">KK<</a>
   </body>
 </html>
