--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ title: Zuhause
   </head>
   <body>
     <h1>{{ "Moinsen!" | downcase }}</h1>
-    <a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK @ GitHub<</a>
+    <a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a>
   </body>
 </html>
