--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@ title: Zuhause
   <body>
     <h1>{{ "Moinsen!" | downcase }}</h1>
     <a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a>
+    <img src="vv1920.jpg" alt="Vasarely 1920" width="500" height="600">
   </body>
 </html>
