--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@ title: Zuhause
   <body>
     <h1>{{ "Moinsen!" | downcase }}</h1>
     <a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a>
-    <img src="vv1920.jpg" alt="Vasarely 1920" style="width:600px;height:600px;">
+    <img src="vv1920.jpg" alt="Vasarely 1920" style="center">
   </body>
+</html>
+
+
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>KK @ GitHub</title>
+    <style>
+      h1 {text-align: center;}
+      p {text-align: center;}
+      div {text-align: center;}
+    </style>
+  </head>
+<body>
+
+<img src="vv1920.jpg" alt="Vasarely 1920" style="width:600px;height:600px;">
+
+<p><a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a></p>
+<div>This is a div.</div>
+
+</body>
 </html>
