--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ title: Zuhause
   </head>
 <body>
 <p><a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a></p>
-<img src="vv1920.jpg" alt="Vasarely 1920" style="width:600px;height:600px;">
+<img src="vv1920.jpg" alt="Vasarely 1920" style="center">
 </body>
 </html>
