--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@ title: Zuhause
       h1 {text-align: center;}
       p {text-align: center;}
       div {text-align: center;}
+      img {
+        width: 50%;
+      }
     </style>
   </head>
 <body>
 <p><a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a></p>
-<img src="vv1920.jpg" alt="Vasarely 1920" style="center" style="width:1200px;height:1200px;">
+<img src="vv1920.jpg" alt="Vasarely 1920" style="center">
 </body>
 </html>
