--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ title: Zuhause
   </head>
 <body>
 <p><a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a></p>
-<img src="vv1920.jpg" alt="Vasarely 1920" style="center">
+<img src="vv1920.jpg" alt="Vasarely 1920" style="center" style="width:900px;height:900px;">
 </body>
 </html>
