--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@ title: Zuhause
       h1 {text-align: center;}
       p {text-align: center;}
       div {text-align: center;}
-      img {
-        width: 50%;
-      }
     </style>
   </head>
 <body>
 <p><a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a></p>
-<img src="vv1920.jpg" alt="Vasarely 1920" style="center" style="width:900px;height:900px;">
+<img src="vv1920.jpg" alt="Vasarely 1920" style="center" width="500" height="600">
 </body>
 </html>
