--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
----
-title: Zuhause
----
-
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>KK @ GitHub</title>
     <style>
       h1 {text-align: center;}
       p {text-align: center;}
       div {text-align: center;}
+      .img-container {
+        text-align: center;
+      }
     </style>
   </head>
-<body>
-<p><a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a></p>
-<img src="vv1920.jpg" alt="Vasarely 1920" style="center" width="500" height="600">
-</body>
+  <body>
+    <p><a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a></p>
+    <div class="img-container"> <!-- Block parent element -->
+      <img src="vv1920.jpg" alt="Vasarely 1920">
+    </div>
+  </body>
 </html>
