--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
       h1 {text-align: center;}
       p {text-align: center;}
       div {text-align: center;}
-      .img-container {
-        text-align: center;
+      .container {
+          margin: 10px;
+          width: 115px;
+          height: 115px;
+          border: 1px solid red;
+          background: url(vv1920.jpg) no-repeat center center;
+          background-size: contain;    
       }
     </style>
   </head>
   <body>
     <p><a href="https://github.com/karstenkelm?tab=repositories/" target="_blank">KK GitHub Repos</a></p>
-    <div class="img-container"> <!-- Block parent element -->
-      <img src="vv1920.jpg" alt="Vasarely 1920">
+    <div class="container"> <!-- Block parent element -->
     </div>
   </body>
 </html>
