--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Karsten Kelm</span>
-                  <span>​GIS &nbsp;| &nbsp;​Computer Vision</span>
-                  <span>Data Science &nbsp;| &nbsp;Machine Learning</span>
+                  <span>​GeoAI &nbsp;| &nbsp;​Computer Vision</span>
                   <span>Working for Ventura County, CA</span>
                 </span>
                 <span id="typed"></span>
