--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Karsten Kelm | SpatialAI</title>  
+  <title>Karsten Kelm | GeoSpatialAI</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -58,7 +58,7 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Karsten Kelm</span>
-                  <span>​GeoAI &nbsp;| &nbsp;​Computer Vision</span>
+                  <span>​GeoSpatialAI &nbsp;| &nbsp;​Computer Vision</span>
                   <span>Working for Ventura County, CA</span>
                 </span>
                 <span id="typed"></span>
