--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Karsten Kelm</span>
-                  <span>​GeoSpatial AI &nbsp;| ​GIS &nbsp;| &nbsp;​Computer Vision</span>
+                  <span>​GeoSpatial AI &nbsp;| ​GIS &nbsp;| ​Computer Vision</span>
+                  <span>​GeoSpatial AI &nbsp;| ​GIS &nbsp;| ​Computer Vision</span>
+                  <span>​GeoSpatial AI &nbsp;| ​GIS &nbsp;| ​Computer Vision</span>
                   <span>Working for Ventura County, CA</span>
                 </span>
                 <span id="typed"></span>
