--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Karsten Kelm</span>
-                  <span>​GeoSpatial AI & ​GIS &nbsp;| ​Computer Vision</span>
+                  <span>​GeoSpatial AI & ​GIS</span>
+                  <span>Computer Vision</span>
                   <span>Working for Ventura County, CA</span>
                 </span>
                 <span id="typed"></span>
