--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <ul>
       <li>Email: <a href="mailto:karstenkelm@gmail.com">karstenkelm@gmail.com</a></li>
       <li>GitHub: <a href="https://github.com/karstenkelm">karstenkelm</a></li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/karstenkelm">linkedin.com/in/karstenkelm</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/karsten-k/">linkedin.com/in/karstenkelm</a></li>
     </ul>
   </main>
   <footer>
