--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | Karsten Kelm</title>
+  <title>Home | GeoAI Lab</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <header>
-    <h1>Karsten Kelm</h1>
+    <h1>GeoAI Lab</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="work.html">Work</a>
@@ -18,7 +18,7 @@
   </header>
   <main>
     <h2>Welcome</h2>
-    <p>This is my personal website where I showcase my work in GIS, GeoAI, and computer vision. Explore my projects, learn more about my background, and feel free to reach out.</p>
+    <p>This is where I showcase my work in GIS, GeoAI, and computer vision. Explore my projects, learn more about my background, and feel free to reach out.</p>
   </main>
   <footer>
     &copy; 2025 Karsten Kelm
