--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>GeoAI Lab</h1>
+    <h1>Karsten Kelm  |  GeoAI Lab</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="work.html">Work</a>
