--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     </nav>
   </header>
   <main>
+    <img src="assets/kk2.jpg" alt="Karsten Kelm" style="max-width: 250px; border-radius: 50%; margin-bottom: 20px;">
     <p>I'm a GeoAI and GIS professional with over 15 years of experience in spatial analysis, remote sensing, and deep learning. I lead GeoAI and disaster recovery efforts in Ventura County and consult on computer vision projects involving aerial imagery, ArcGIS, and OpenCV.</p>
     <p>I hold a Master's in Land Management and I'm currently completing all courses at OpenCV University.</p>
   </main>
