--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | GeoAI Lab</title>
+  <title>Home | The GeoAI Lab</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <header>
-    <h1>Karsten Kelm  |  GeoAI Lab</h1>
+    <h1>Karsten Kelm  |  The GeoAI Lab</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="work.html">Work</a>
